# workshop

./: .DEREK.yml  .gitignore  CONTRIBUTING.md  README.md  appendix.md  astronaut-finder.yml  hello-openfaas.yml  lab1.md  lab10.md  lab11.md  lab1a.md  lab1b.md  lab2.md  lab3.md  lab4.md  lab4b.md  lab5.md  lab6.md  lab7.md  lab7b.md  lab8.md  lab9.md  pyproject.toml  space-counter.yml  stack.yml
.github/: CODEOWNERS  ISSUE_TEMPLATE.md
astronaut-finder/: handler.py
diagram/: director_function.gliffy  issue-bot.gliffy
grafana-dashboards/: openfaas-dash.json
hello-openfaas/: handler.py
hmac-protected/: stack.yml
hmac-protected/hmac-protected/: handler.py
issue-bot/: .gitignore  env.example.yml  stack.yml
issue-bot-secrets/: stack.yml
issue-bot-secrets/bot-handler/: handler.py
issue-bot/bot-handler/: handler.py
print-env/: handler.js  package.json
space-counter/: handler.py
tests/: conftest.py  test_infrastructure.py
translations/cn/: README.md  lab1.md  lab10.md  lab11.md  lab1b.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md
translations/ja/: README.md  appendix.md  lab1.md  lab10.md  lab2.md  lab3.md  lab4.md  lab5.md  lab6.md  lab7.md  lab8.md  lab9.md
